changed stored data for the user
